some post scroll bar overflow fixes

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,10 +3,6 @@
 	padding: 0;
 }
 
-#wrapper {
-	overflow: hidden;
-}
-
 /* calendar */
 /*.wc-header td {
 	background: url(/static/img/shader.png) repeat-x;
